Run script with Gradle